# NFL-IQ

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MODEL_CARD.md  README.md  TRANSFORMATION_SUMMARY.md  USAGE.md  choir_of_objects.py  requirements.txt  schemas.py  test_choir_of_objects.py  utils.py
config/: config.yaml
dashboard/: .gitignore  README.md  app.py  package-lock.json  package.json  tsconfig.json  vitest.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/components/: ComposerPanel.tsx  CreateObjectModal.tsx  PresetLibrary.tsx  PreviewPlayer.tsx  SongMixer.tsx
dashboard/app/lib/: config.ts  lyrics.ts  melody.ts  persistence.ts  player.ts  presets.ts  prompt.ts  store.ts  synth.ts  types.ts  voice.ts  waveform.ts
dashboard/pages/: 01_Home.py  02_Teams.py  03_Players.py  04_Rankings_Elo.py  05_Matchups.py  06_Live_Play_by_Play.py  07_Model_Report.py
dashboard/tests/: store.test.ts
datasources/: parse_common.py  scrape_boxscores.py  scrape_live.py  scrape_pbp.py  scrape_schedule.py
features/: build_matchup_features.py  build_player_features.py  build_team_features.py  clustering.py
inference/: live_pipeline.py  run_inference.py
modeling/: calibrate.py  player_stat_models.py  score_model.py  spread_total_models.py  winprob_ensemble.py
pyservice/: README.md  main.py  models.py  pyproject.toml  requirements.txt
pyservice/tests/: test_api.py  test_synthesis.py
ratings/: player_elo.py  team_elo.py
scripts/: cron_5min.sh  launch_local.bat  launch_local.sh  update_all.sh
tests/: test_system.py
(+12 files in other folders)
