[tool.poetry]
name = "singing-object-studio-api"
version = "1.0.0"
description = "FastAPI backend for Singing Object Studio"
authors = ["Singing Object Studio Team"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
